# Bus-Booking-application

./: .gitignore
backend/: .env  Procfile  count_admins.py  count_admins_shell.py  create_admin.py  db.sqlite3  list_users_shell.py  manage.py  pyproject.toml
backend/bus_booking/: settings.py  urls.py  wsgi.py
backend/core/: admin.py  models.py  permissions.py  serializers.py  urls.py  urls_booking.py  urls_mybookings.py  urls_operators.py  urls_routes.py  urls_search.py  urls_webhook.py  views.py
backend/core/migrations/: 0001_initial.py
backend/core/services/: payment_service.py  stripe_service.py  ticket_service.py
backend/users/: authentication.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: .env  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css  index.html  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AnimatedBusHero.tsx  Navbar.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAnimePage.ts
frontend/src/pages/: BookingCancel.tsx  BookingSuccess.tsx  Home.tsx  Login.tsx  MyBookings.tsx  NotFound.tsx  Register.tsx  SearchResults.tsx  SeatSelection.tsx
frontend/src/types/: animejs.d.ts
