[project]
name = "bus-ticket-backend"
version = "1.0.0"
description = "Bus Ticket Booking API - India"
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2.16,<5.0",
    "djangorestframework>=3.15.2",
    "django-cors-headers>=4.4.0",
    "django-environ>=0.11.2",
    "psycopg2-binary>=2.9.9",
    "djangorestframework-simplejwt>=5.3.1",
    "stripe>=10.0.0",
    "gunicorn>=23.0.0",
    "whitenoise>=6.7.0",
    "django-filter>=24.3",
    "drf-spectacular>=0.27.2",
    "pillow>=10.4.0",
    "celery>=5.4.0",
    "redis>=5.0.8",
    "reportlab>=4.2.0",
]